[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "numpy>=1.26.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "nsd_access"
version = "0.0.1"
description = "NSDAccess: Access Natural Scenes Data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Tomas Knapen", email="tknapen@gmail.com" }
]

maintainers = [
    { name = "Nicholas Blauch"}, 
    { name = "Thomas Barzola", email="thomas.hild@idor.org" }
]

dependencies = [
    'numpy>=1.26.4',
    'nibabel>=3.2.0',
    'h5py>=3.9.0',
    'pandas>=2.0',
    'tqdm>=4.40.0',
    'matplotlib>=3.8.0',
    'cython>=3.2.4'
    'nsdcode @ git+https://github.com/cvnlab/nsdcode.git@bfd36a5#egg=nsdcode'
]

classifiers = [
"Development Status :: 3 - Alpha",
"Environment :: Console",
"Intended Audience :: Science/Research",
"License :: OSI Approved :: MIT License",
"Operating System :: Linux",
"Programming Language :: Python",
"Topic :: Scientific/Engineering"
]

[tool.setuptools]
packages = ['nsd_access']

[project.optional-dependencies]
dev = [
"ruff>=0.0.319",
"flake8>=6.0"
]

[project.urls]
Homepage = 'https://github.com/BarzolaT/nsd_access'
ForkedFrom = 'https://github.com/nblauch/nsd_access'

[tool.ruff]
line-length = 88
ignore = ["E501", "E702", "W504"]

[tool.flake8]
max-line-length = 88
ignore = ["E501", "E702", "W504"]

